@@ -143,22 +143,6 @@ name|exp
 operator|.
 name|parser
 operator|.
-name|ASTNegate
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|cayenne
-operator|.
-name|exp
-operator|.
-name|parser
-operator|.
 name|ASTNotIn
 import|;
 end_import
@@ -385,11 +369,10 @@ name|ASTNotIn
 condition|)
 block|{
 return|return
-operator|new
-name|ASTNegate
-argument_list|(
 name|trimmed
-argument_list|)
+operator|.
+name|notExp
+argument_list|()
 return|;
 block|}
 return|return
