@@ -5295,13 +5295,16 @@ specifier|public
 name|void
 name|testSelectLongIn
 parameter_list|()
+throws|throws
+name|Exception
 block|{
-comment|// not all adapters strip INs, so we just make sure query with such
-comment|// qualifier
-comment|// fires OK
+name|createArtistsDataSet
+argument_list|()
+expr_stmt|;
+comment|// not all adapters strip INs, so we just make sure query with such qualifier fires OK
 name|Object
 index|[]
-name|numbers
+name|names
 init|=
 operator|new
 name|String
@@ -5318,7 +5321,7 @@ literal|0
 init|;
 name|i
 operator|<
-name|numbers
+name|names
 operator|.
 name|length
 condition|;
@@ -5326,14 +5329,18 @@ name|i
 operator|++
 control|)
 block|{
-name|numbers
+name|names
 index|[
 name|i
 index|]
 operator|=
-literal|""
+literal|"artist"
 operator|+
+operator|(
 name|i
+operator|+
+literal|2
+operator|)
 expr_stmt|;
 block|}
 name|SelectQuery
@@ -5356,15 +5363,134 @@ name|inExp
 argument_list|(
 literal|"artistName"
 argument_list|,
-name|numbers
+name|names
 argument_list|)
 argument_list|)
 decl_stmt|;
-name|context
-operator|.
-name|performQuery
-argument_list|(
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
 name|query
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|19
+argument_list|,
+name|artists
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+comment|/** 	 * Tests NOT INs with more than 1000 elements 	 */
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testSelectLongNotIn
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|createArtistsDataSet
+argument_list|()
+expr_stmt|;
+comment|// not all adapters strip INs, so we just make sure query with such qualifier fires OK
+name|Object
+index|[]
+name|names
+init|=
+operator|new
+name|String
+index|[
+literal|1001
+index|]
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|names
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|names
+index|[
+name|i
+index|]
+operator|=
+literal|"artist"
+operator|+
+operator|(
+name|i
+operator|+
+literal|2
+operator|)
+expr_stmt|;
+block|}
+name|SelectQuery
+argument_list|<
+name|Artist
+argument_list|>
+name|query
+init|=
+operator|new
+name|SelectQuery
+argument_list|<>
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|,
+name|ExpressionFactory
+operator|.
+name|notInExp
+argument_list|(
+literal|"artistName"
+argument_list|,
+name|names
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|Artist
+argument_list|>
+name|artists
+init|=
+name|query
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|artists
+operator|.
+name|size
+argument_list|()
 argument_list|)
 expr_stmt|;
 block|}
